--- a/index.html
+++ b/index.html
@@ -56,6 +56,7 @@
 			</div>
 		</div>
 	</div>
+	<div class="enter">
 <div class="close"></div>
 <form class="enter__form" method="post">
 	<label class="enter__name">Логин <input type="text" class="enter__input"></label>
