--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
 	<div class="main ">
-	<header class=header>
+	<!-- <header class=header>
 		<nav class="nav all">
 	<ul class="nav__ul">
 		<li class="nav__li">
@@ -25,7 +25,7 @@
 		</li>
 	</ul>
 </nav>
-</header>
+</header> -->
 
 
 		<div class="job all">
@@ -33,22 +33,22 @@
 				Мои работы:
 			</h1>
 			<div class="job__blocks">
-				<a class="job__block" href="Bitrix">
+			<a class="job__block" href="Stroy">
 					<div class="job__img1">
 
 					</div>
 				</a>
-				<a class="job__block" href="Mountains-travel">
+				<a class="job__block" href="Bitrix">
 					<div class="job__img2">
 
 					</div>
 				</a>
-				<a class="job__block" href="Panekea">
+				<a class="job__block" href="Mountains-travel">
 					<div class="job__img3">
 
 					</div>
 				</a>
-				<a class="job__block" href="Stroy">
+				<a class="job__block" href="Panekea">
 					<div class="job__img4">
 
 					</div>
